fix(iam): permit admin to query user roles
